community.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community
spec:
  selector:
    matchLabels:
      app: community
  template:
    metadata:
      labels:
        app: community
    spec:
      containers:
        - name: community
          image: 20221174/yorijori_community:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: community
spec:
  selector:
    app: community
  ports:
    - port: 3000
      targetPort: 3000
