ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
    - host: yorijori.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 3000
          - path: /write
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
          - path: /user-api
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 3000
          - path: /createfundingPage
            pathType: Prefix
            backend:
              service:
                name: funding
                port:
                  number: 3000
          - path: /joinfundingPage
            pathType: Prefix
            backend:
              service:
                name: funding
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 3000
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
